image-carousel->gallery and fix more layout bugs

--- a/web/styles/styles.scss
+++ b/web/styles/styles.scss
@@ -65,17 +65,17 @@ html {
 .imageblock {
   max-height: 50vh;
   width: 100%;
+  margin: 8px;
 
   display: flex;
   justify-content: center;
 
   .imageblock-inner {
     position: relative;
-    margin: 8px;
 
     img {
-      max-height: 100%;
-      max-width: 50vh;
+      max-height: 50vh;
+      max-width: 50vw;
     }
 
     .imageblock-text {
@@ -112,7 +112,7 @@ html {
   }
 }
 
-.image-carousel .content {
+.image-gallery .content {
   display: flex;
   overflow-y: auto;
 
@@ -121,6 +121,10 @@ html {
     height: 25vh;
     // and this is required to make them not overlap with each other
     width: unset;
+
+    .imageblock-inner img {
+      max-height: 25vh;
+    }
   }
 }
 
